# navi

./: CMakeLists.txt  CSE499StatusReports - Week 11.docx  CSE499StatusReports - Week 9.docx  Final Requirements.docx  Initial Requirements.docx  PROJECT PROPOSAL DOCUMENT.docx  example.mdp  gui.mdp  run_and_export.bat
demo/: blot.py  demo.py  flit.py
documents/: CSE499StatusReports - Week 10.docx  CSE499StatusReports - Week 12.docx  CSE499StatusReports - Week 13.docx  CSE499StatusReports - Week 2.docx  CSE499StatusReports - Week 3.docx  CSE499StatusReports - Week 5.docx  CSE499StatusReports - Week 6.docx  CSE499StatusReports - Week 7.docx  Final Requirements.docx
resources/: transcript.txt
version0/: flit.cpp  geomlineref.cpp  main.cpp  miniaudio_impl.cpp  myath.h  particle.cpp  point.h  processedaudio.cpp  processedaudio.h  settings.h  transcript.h  window.cpp
